
Added warning message to OpenGL rendering routines about new
mesh primitive, which we cannot currently render.

Added -if, -id, -of, and -od options to rcalc to provide for
binary float and double i/o.

****************** COMPATIBILITY CHANGE ***********************
Changed holodeck format to used off_t instead of long for beam
positions, which allows holodecks to grow to system file size limit.

Fixed wrapping long in source hit test code, which would cause
odd horizontal lines in some very long renderings.

Added -f and -w options to ra_tiff to create IEEE float and 16-bit/primary
TIFF output, respectively.  These formats are also understood on reverse
conversion.  (16-bit/primary has been understood for some time, but not
IEEE float.)

Added -N option to rad to start multiple rendering processes in
parallel.

Fixed bug where mesh instances were not being freed, so subsequent calls
in programs like ranimate would refer to bogus data.

Added support in normtiff for floating-point and 16-bit/sample TIFF input
files.

Changed marksources() routine (src/rt/source.c) to check all
primitives in the modifier chain for emitting types, not only
the first.  This permits sources to be described with intervening
modifiers before the light/illum/glow primitive.

Fixed bug in xform where it was neglecting to add transform arguments
to new mesh primitive.

Added -dF and -dD options to pvalue for byte-swapped floats and
doubles, respectively.

Changed meta2tga to output correct colors.

****** COMPATIBILITY CHANGE ********
Changed local coordinate index from 32-bits to 16-bits, which requires
that Radiance mesh files be recompiled.

Changed integer tone-mapping routines to better deal with images
containing large, constant regions.

Improved interaction with rholo -o ogl driver under OS X, which was
returning bad values from the depth buffer.

Minor bug fix in ranimove where it was restarting processes when it
didn't need to.