@@ -81,16 +81,16 @@ double	specjitter = 1.;		/* specular sampling jitter */
 
 int  backvis = 1;			/* back face visibility */
 
-int  maxdepth = 6;			/* maximum recursion depth */
-double	minweight = 5e-3;		/* minimum ray weight */
+int  maxdepth = 7;			/* maximum recursion depth */
+double	minweight = 4e-3;		/* minimum ray weight */
 
 char  *ambfile = NULL;			/* ambient file name */
 COLOR  ambval = BLKCOLOR;		/* ambient value */
 int  ambvwt = 0;			/* initial weight for ambient value */
-double	ambacc = 0.2;			/* ambient accuracy */
-int  ambres = 32;			/* ambient resolution */
-int  ambdiv = 128;			/* ambient divisions */
-int  ambssamp = 0;			/* ambient super-samples */
+double	ambacc = 0.15;			/* ambient accuracy */
+int  ambres = 64;			/* ambient resolution */
+int  ambdiv = 512;			/* ambient divisions */
+int  ambssamp = 128;			/* ambient super-samples */
 int  ambounce = 0;			/* ambient bounces */
 char  *amblist[128];			/* ambient include/exclude list */
 int  ambincl = -1;			/* include == 1, exclude == 0 */
